# woundcpp

./: CMakeLists.txt  README.md  loadModules.sh  makefile
apps/: results_circle_wound
include/: myMeshGenerator.h  solver.h  wound.h
meshing/: 1.inp  2.inp  3.inp  4.inp  gmsh_quad_mesh.msh  myMeshGenerator.cpp  myMeshGenerator.py  rectangle_mesh.py
meshing/examples/: quad_mesh_prb.sh
python/: LocalProblem.ipynb
src/: results_circle_wound.cpp  solver.cpp  wound.cpp
